# komadori

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.dev  docker-compose-integ.yaml  docker-compose.yaml  run-tests.sh
frontend/: .eslintrc.js  .gitignore  Dockerfile  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  config.js  create-account.js  github-login-component.js  github-oauth-window.js  hydra-api.js  index.js  site.scss  user-api.js  user-consent.js  user-dashboard.js
frontend/src/actions/: index.js
frontend/src/api/: admin.js  github.js  hydra.js  user.js
frontend/src/components/: AdminBootstrap.js  AdminManageUsers.js  ConsentComponent.js  CreateAccount.js  CreateAccount.js.orig  DevLogin.js  GithubLogin.js  LoginPage.js  LogoutLink.js  NavWrapper.js  Security.js  Topbar.js  UserDashboard.js
frontend/src/containers/: AdminBootstrapContainer.js  AdminDashboardContainer.js  App.js  AuthedContainers.js  ConsentContainer.js  CreateAccount.js  CreateAccountContainer.js  DevLoginContainer.js  GithubOauthWindow.js  LoginContainer.js  LoginWithDevContainer.js  LoginWithGithubContainer.js  LogoutContainer.js  Security.js  Topbar.js  UserDashboardContainer.js
frontend/src/reducers/: index.js
frontend/src/util/: user.js
hack/compose/: db-init.sh  db_env  hydra-init.sh  hydra_env  komadori_env  komadori_secrets.sample
hydra_client/: .gitignore  Cargo.toml  Makefile  README.md
hydra_client/docs/: ConsentRequest.md  ConsentRequestAcceptance.md  ConsentRequestRejection.md  Context.md  FlushInactiveOAuth2TokensRequest.md  Group.md  GroupMembers.md  Handler.md  HealthApi.md  InlineResponse200.md  InlineResponse2001.md  InlineResponse401.md  JoseWebKeySetRequest.md  JsonWebKey.md  JsonWebKeyApi.md  JsonWebKeySet.md  JsonWebKeySetGeneratorRequest.md  OAuth2Api.md  OAuth2Client.md  OAuth2ConsentRequest.md  OAuth2TokenIntrospection.md  OauthTokenResponse.md  Policy.md  PolicyApi.md  PolicyConditions.md  SwaggerAcceptConsentRequest.md  SwaggerCreatePolicyParameters.md  SwaggerDoesWardenAllowAccessRequestParameters.md  SwaggerDoesWardenAllowTokenAccessRequestParameters.md  SwaggerFlushInactiveAccessTokens.md  SwaggerGetPolicyParameters.md  SwaggerJsonWebKeyQuery.md  SwaggerJwkCreateSet.md  SwaggerJwkSetQuery.md  SwaggerJwkUpdateSet.md  SwaggerJwkUpdateSetKey.md  SwaggerListPolicyParameters.md  SwaggerListPolicyResponse.md  SwaggerOAuthConsentRequest.md  SwaggerOAuthConsentRequestPayload.md  (+19 more)
hydra_client/examples/: auth.rs
hydra_client/src/apis/: client.rs  configuration.rs  health_api.rs  json_web_key_api.rs  mod.rs  o_auth2_api.rs  policy_api.rs  request.rs  warden_api.rs
hydra_client/src/models/: consent_request.rs  consent_request_acceptance.rs  context.rs  (+58 more)
hydra_oauthed_client/: Cargo.toml  README.md
hydra_oauthed_client/examples/: basic.rs
hydra_oauthed_client/src/: lib.rs
migrations/2017-10-28-223438_create_users/: up.sql
migrations/2018-06-05-230713_add_groups/: up.sql
migrations/2018-08-24-003205_local_provider/: up.sql
src/: admin_routes.rs  api_main.rs  db.rs  errors.rs  github.rs  lib.rs  main.rs  models.rs  oauth.rs  oauth_routes.rs  permissions.rs  schema.rs  user_routes.rs
src/api/: mod.rs
src/db/: groups.rs  mod.rs  schema.rs  users.rs
src/hydra/: client.rs  mod.rs
src/provider/: github.rs  local.rs  mod.rs
src/request_id/: mod.rs
src/types/: mod.rs
src/util/: mod.rs  request_core.rs
static/: create.html  index.html  login.html
templates/: index.html.tera
templates/partial_user/: index.html.tera
templates/partials/: index_newUserSignup.hbs  userDashboard.hbs
templates/user/: index.html.tera
tests/: integ_tests.rs
tokio_rocket/: Cargo.toml
