[package]
name = "komadori"
version = "0.1.0"
authors = ["Wobscale Authors"]

[dependencies]
log = "0.4"
fern = "0.5"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = "0.5"
diesel = { version = "1.0.0", features = ["postgres", "uuid"] }
diesel_migrations = { version = "1.0.0", features = ["postgres"] }
r2d2 = "0.8"
r2d2-diesel = "1.0.0"
oauth2 = "1.1"
rand = "0.3"
dotenv = "0.10.*" # not used, but included due to https://github.com/purpliminal/rust-dotenv/issues/69
# part of the ring thing below
github-rs = "=0.6.0"
reqwest = "0.8"
url = "1.6"
lazy_static = "1.0"
constant_time_eq = "0.1"

# See https://github.com/SergioBenitez/Rocket/issues/513; this should be temporary
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }

[patch.crates-io]
ring = { git = "https://github.com/SergioBenitez/ring", branch = "v0.11" }
