[package]
name = "komadori"
version = "0.1.0"
authors = ["Wobscale Authors"]

[dependencies]
log = "0.4"
fern = "0.5"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = "0.5"
diesel = { version = "1.0.0", features = ["postgres", "uuid"] }
diesel_migrations = { version = "1.0.0", features = ["postgres"] }
r2d2 = "0.8"
r2d2-diesel = "1.0.0"
oauth2 = "1.1"
rand = "0.3"
github-rs = "0.6"
reqwest = "0.8"
hydra_oauthed_client = { path = "./hydra_oauthed_client" }
hydra_client = { path = "./hydra_client" }
url = "1.6"
lazy_static = "1.0"
constant_time_eq = "0.1"

hyper = "0.11"
tokio-core = "*"
futures = "0.1.14"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"

multi-reactor_drifting = { git = "https://github.com/wobscale/multi-reactor_drifting" }
